--- a/.ci_support/linux_64_krb51.20libcurl7openssl1.1.1.yaml
+++ b/.ci_support/linux_64_krb51.20libcurl7openssl1.1.1.yaml
@@ -1,40 +1,37 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.14'
-MACOSX_SDK_VERSION:
-- '10.14'
 bzip2:
 - '1'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '16'
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 krb5:
-- '1.21'
+- '1.20'
 libcurl:
-- '8'
-libiconv:
-- '1'
+- '7'
 lz4_c:
 - 1.9.3
-macos_machine:
-- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
-- '3'
+- 1.1.1
 pcre2:
 - '10.42'
 target_platform:
-- osx-64
+- linux-64
 xz:
 - '5'
 zip_keys:
 - - openssl
   - libcurl
+  - krb5
 zlib:
 - '1.2'
 zstd:
