--- a/.ci_support/linux_64_krb51.20libcurl7openssl3.yaml
+++ b/.ci_support/linux_64_krb51.20libcurl7openssl3.yaml
@@ -1,11 +1,7 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
-cdt_arch:
-- aarch64
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
@@ -15,9 +11,9 @@ cxx_compiler:
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 krb5:
-- '1.21'
+- '1.20'
 libcurl:
 - '7'
 lz4_c:
@@ -29,12 +25,13 @@ openssl:
 pcre2:
 - '10.42'
 target_platform:
-- linux-aarch64
+- linux-64
 xz:
 - '5'
 zip_keys:
 - - openssl
   - libcurl
+  - krb5
 zlib:
 - '1.2'
 zstd:
