--- a/.ci_support/linux_aarch64_krb51.20libcurl7openssl3.yaml
+++ b/.ci_support/linux_aarch64_krb51.20libcurl7openssl3.yaml
@@ -1,7 +1,11 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
+cdt_arch:
+- aarch64
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,11 +15,11 @@ cxx_compiler:
 cxx_compiler_version:
 - '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-aarch64
 krb5:
-- '1.21'
+- '1.20'
 libcurl:
-- '8'
+- '7'
 lz4_c:
 - 1.9.3
 ncurses:
@@ -25,12 +29,13 @@ openssl:
 pcre2:
 - '10.42'
 target_platform:
-- linux-64
+- linux-aarch64
 xz:
 - '5'
 zip_keys:
 - - openssl
   - libcurl
+  - krb5
 zlib:
 - '1.2'
 zstd:
