--- a/.ci_support/osx_64_krb51.20libcurl7openssl3.yaml
+++ b/.ci_support/osx_64_krb51.20libcurl7openssl3.yaml
@@ -13,7 +13,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '16'
 krb5:
-- '1.21'
+- '1.20'
 libcurl:
 - '7'
 libiconv:
@@ -25,7 +25,7 @@ macos_machine:
 ncurses:
 - '6'
 openssl:
-- 1.1.1
+- '3'
 pcre2:
 - '10.42'
 target_platform:
@@ -35,6 +35,7 @@ xz:
 zip_keys:
 - - openssl
   - libcurl
+  - krb5
 zlib:
 - '1.2'
 zstd:
