--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,6 @@
 conda_build:
   pkg_format: '2'
-conda_forge_output_validation: true
+conda_forge_output_validation: false
 github:
   branch_name: main
   tooling_branch_name: main
