--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -7,9 +7,9 @@ c_stdlib_version:
 cdt_name:
 - conda
 channel_sources:
-- conda-forge
+- tiledb/label/for-cloud,conda-forge
 channel_targets:
-- conda-forge main
+- tiledb for-cloud
 cxx_compiler:
 - gxx
 cxx_compiler_version:
