--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,7 @@ MACOSX_SDK_VERSION:  # [osx and x86_64]
   - 10.14            # [osx and x86_64]
 c_stdlib_version:    # [osx and x86_64]
   - 10.14            # [osx and x86_64]
+channel_sources:
+  - tiledb/label/for-cloud,conda-forge
+channel_targets:
+  - tiledb for-cloud
